<resources>
    <string name="app_name" translatable="false">cashFlow-v1</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="enter_email" translatable="false">Enter Email</string>
    <string name="create_password" translatable="false">Create Password</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="enter_password" translatable="false">Enter Password</string>
    <string name="sign_in_options" translatable="false">Sign-In-Options:</string>
    <string name="home" translatable="false">home</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_transaction" translatable="false">Add Transaction</string>
    <string name="sign_up_options" translatable="false">Sign-Up-Options:</string>
    <string name="default_web_client_id">524367252822-93lbmsj4kilm6l6m95scfkraso4vpcr7.apps.googleusercontent.com</string>
    <string name="already_have_an_account" translatable="false">Already have an account?</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="transactions" translatable="false">Transactions</string>
    <string name="budgets" translatable="false">Budgets</string>
    <string name="reports" translatable="false">Reports</string>
    <string name="add" translatable="false">add</string>
    <string name="coming_soon" translatable="false">Coming Soon</string>
    <string name="text1" translatable="false">Please wait a moment as data is being fetched:</string>
    <string name="view_transactions" translatable="false">View Transactions</string>
    <string name="menu" translatable="false">dropDownMenuExample</string>
    <string name="change_currency">Change currency</string>
    <string name="push_notifications">Push notifications</string>
    <string-array name="languages">
        <item>Rand</item>
        <item>Dollars</item>
        <item>Euro</item>
        <item>Yen</item>
        <item>Pound</item>
    </string-array>
    <string-array name="app_languages">
        <item>English</item>
        <item>Afrikaans</item>
        <item>Zulu</item>
    </string-array>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>
</resources>