<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signUpPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:gravity="center" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="15dp">
       <EditText
           android:id="@+id/email"
           android:inputType="textEmailAddress"
           android:autofillHints="emailAddress"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/enter_email"
           android:background="@color/white"
           android:padding="15sp" />

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:passwordToggleEnabled="true"
           android:layout_marginTop="10dp">
           <com.google.android.material.textfield.TextInputEditText
               android:background="@color/white"
               android:id="@+id/password1"
               android:layout_width="match_parent"
               android:inputType="textPassword"
               android:hint="@string/create_password"
               android:layout_height="wrap_content">
           </com.google.android.material.textfield.TextInputEditText>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:passwordToggleEnabled="true"
           android:layout_marginTop="10dp">
           <com.google.android.material.textfield.TextInputEditText
               android:background="@color/white"
               android:id="@+id/password2"
               android:layout_width="match_parent"
               android:inputType="textPassword"
               android:hint="@string/confirm_password"
               android:layout_height="wrap_content">
           </com.google.android.material.textfield.TextInputEditText>
       </com.google.android.material.textfield.TextInputLayout>



   </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:backgroundTint="@color/greenThem"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/greenThem"
            android:text="@string/sign_in"
            android:textSize="20sp"/>
    </LinearLayout>



</LinearLayout>