<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signInPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <EditText
            android:id="@+id/email1"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:background="@color/white"
            android:padding="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:background="@color/white"
                android:id="@+id/password3"
                android:inputType="textPassword"
                android:layout_width="match_parent"

                android:hint="@string/enter_password"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:backgroundTint="@color/greenThem"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sign_in_options"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/google2"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/google_icon"/>
        <ImageView
            android:id="@+id/facebook2"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:src="@drawable/facebook_icon"/>
    </LinearLayout>

</LinearLayout>