<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:orientation="vertical"
    android:padding="15dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_currency"
                android:textSize="20sp"/>
            <Spinner
                android:id="@+id/spinner_languages"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:spinnerMode="dropdown"
                android:layout_marginStart="50dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_notifications"
                android:textSize="20sp"/>
            <androidx.appcompat.widget.SwitchCompat
                android:layout_marginStart="40dp"
                android:id="@+id/switch1"
                android:layout_width="60dp"
                android:layout_height="60dp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>